@@ -91,6 +91,14 @@ struct exception : virtual std::runtime_error, virtual boost::exception {
    */
   bool is_js_exception() const;
 
+  /**
+   * This function is an alias for #is_js_exception
+   * Just for compatibility purpose.
+   *
+   * @deprecated Use #is_js_exception. This function will be removed in future releases.
+   */
+  bool empty() const { return is_js_exception(); }
+
 public:
 #ifndef IN_DOXYGEN
   void throw_js_INTERNAL();
